--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,24 +6,43 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
-    <uses-permission
-        android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
+    <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="com.example.permission.MAPS_RECEIVE"
         android:protectionLevel="signature"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/andealrlogo"
+        android:icon="@drawable/andealr_logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
+        <activity android:name="com.facebook.LoginActivity" />
+
+
+
+        <receiver
+            android:name=".GCM.GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <category android:name="com.programmingtechniques.gcmdemo" />
+            </intent-filter>
+        </receiver>
+        <service android:name=".GCM.GcmIntentService" />
+
+
         <activity
             android:name="com.ascentsmartwaves.andealr.activities.SplashScreenActivity"
             android:label="@string/app_name">
@@ -46,7 +65,7 @@
         <activity android:name="com.ascentsmartwaves.andealr.activities.AddDealActivity"
             android:screenOrientation="portrait"
             />
-        <activity android:name="com.ascentsmartwaves.andealr.activities.ProfileActivity"
+        <activity android:name=".activities.ProfileActivity"
             android:screenOrientation="portrait"
             />
         <activity android:name="com.ascentsmartwaves.andealr.activities.NotificationsSettings"
